# MyAir

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-test  Makefile  README.md  docker-compose.yml  pyproject.toml
docker_compose/: app.yaml  kafka.yaml  storages.yaml  tests.yaml
src/: manage.py
src/amadeus_api/: models.py  urls.py
src/amadeus_api/api/: main.py  serializers.py  views.py
src/amadeus_api/repositories/: repository.py
src/app/: settings.py  urls.py
src/app/conf/: .env  auth.py  boilerplate.py  db.py  environ.py  http.py  installed_apps.py  middleware.py  rest_framework.py  static.py  timezone.py
src/apps/amadeus_api/: apps.py  urls.py
src/apps/auth/: serializers.py  view.py
src/apps/kafka_api/: serializer.py  utils.py
src/apps/tg_bot/: auth.py  bot_messages.py  main.py
src/apps/tickets/: models.py  schemas.py  tests.py  urls.py
src/apps/users/: models.py  schemas.py  tests.py  urls.py
src/auth/: serializers.py  view.py
src/core/: asgi.py  interface.py  pagination.py  settings.py  urls.py
src/core/conf/: auth.py  boilerplate.py  db.py  environ.py  http.py  i18n.py  installed_apps.py  knox.py  media.py  middleware.py  rest_framework.py  static.py  timezone.py
src/core/factories/: amadeus_factory.py  rep_factory.py
src/kafka/: serializer.py  utils.py
src/planes/: models.py  urls.py
src/planes/api/: amadeus_api.py  serializers.py  views.py
src/tickets/: models.py  schemas.py  tests.py  urls.py
src/users/: models.py  schemas.py  tests.py  urls.py
src/utils/: interface.py  pagination.py
(+39 files in other folders)
