[tool.poetry]
name = "myair"
version = "0.0.1"
description = "Pet project, which is a clone of the airline website"
authors = ["qq2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
